user 模块Del user功能
